--- a/app/package.json
+++ b/app/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^2.13.8",
-    "babel-plugin-import": "^1.6.2",
+    "antd": "^3.1.3",
+    "avataaars": "^1.1.0",
+    "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^1.1.1",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
-    "react-app-rewire-less": "^2.0.8",
-    "react-app-rewired": "^1.3.4",
+    "react-app-rewired": "^1.4.0",
     "react-dom": "^16.2.0",
+    "react-lz-editor": "^0.11.9",
+    "react-quill": "^1.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.16",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -23,6 +28,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.6.3",
+    "react-app-rewire-less": "^2.1.0",
     "redux-devtools-extension": "^2.13.2"
   }
 }
