--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "node api-server/server.js",
-    "heroku-postbuild": "cd app/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd app/ && npm install && npm install && npm run build"
   },
   "cacheDirectories": [
     "node_modules",
