--- a/package.json
+++ b/package.json
@@ -26,10 +26,24 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "clone": "^2.1.1",
-    "redux":"^3.7.2",
-    "react-redux":"^5.0.5",
     "react-router":"^4.1.1",
-    "react-router-dom":"4.1.1"
+    "antd": "^3.1.3",
+    "avataaars": "^1.1.0",
+    "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^1.1.1",
+    "lodash": "^4.17.5",
+    "react": "^16.2.0",
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.6",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.0.16",
+    "react-app-rewired": "^1.4.0",
+    "react-lz-editor": "^0.11.9",
+    "react-quill": "^1.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "node api-server/server.js",
