modified package.json to deploy on heroku

--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
     "react-app-rewire-less": "^2.1.0",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.2"
   }
  }
